--- a/ecommerce/public/index.html
+++ b/ecommerce/public/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title><%= htmlWebpackPlugin.options.title %></title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uswds/2.8.1/js/uswds.min.js"
+    integrity="sha512-XBP0H4eATUec0j7O12bxI15NwEmSo1c4/TFLPf2RyPhFK7cjyZACIS+Dcu2XMjx4nGhsD4N/rZwtPBgNTSWmOw=="
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uswds/2.8.1/css/uswds.min.css"
+    integrity="sha512-kChTmGRQZMmaDnmwIgn1E6c3rvXzqTAwRjZ4MJj7OW0a46pYRusGSp8aDUu5NzCeGNReRcCTeAtQskU+uMcHpQ=="
+    crossorigin="anonymous" />
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+      Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
